--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,9 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+th, td, thead, table {
+  border-width: 2px;
+  border-style: solid;
+  border-color:black;
+}
