--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  background-color: #bacfef
 }
 
 a {
@@ -24,4 +25,40 @@ th, td, thead, table {
   border-width: 2px;
   border-style: solid;
   border-color:black;
+}
+
+.calendar-table{
+  background-color: white;
+  margin: 0px 110px;
+  height: 70vh
+}
+
+.calendar-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
+}
+
+.weekday-th {
+  padding: 7px;
+}
+
+.large-btn {
+  padding: 10px 0px;
+  width: 125px;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.month-select {
+    width: 150px;
+    height: 44px;
+    font-size: 20px;
 }
