feat(Styling): add different background color for todays box

--- a/public/style.css
+++ b/public/style.css
@@ -57,8 +57,8 @@ td {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
 }
 
-.today-box {
-  background-color: red
+.today {
+  background-color: #EFC2E0;
 }
 
 .prev-next-month {
