--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,9 @@ th, td, thead, table {
 
 td {
   background-color: white;
+  height: 7vw;
+  width: 7vw;
+  font-size: 20px;
 }
 
 .calendar-table{
@@ -66,18 +69,26 @@ td {
 }
 
 .weekday-th {
-  padding: 7px;
-  font-weight: bold
+  font-weight: bold;
+  padding: 7px 0px;
+  width: 100px;
+}
+
+.selected-date {
+  background-color: #C9CFCF
 }
 
 .large-btn {
   padding: 10px 0px;
-  width: 125px;
+  width: 145px;
+  margin: 0px 15px;
+  font-size: 14px;
 }
 
 .btn-container {
   display: flex;
   flex-direction: row;
+  margin: 30px;
 }
 
 .month-select {
@@ -111,6 +122,7 @@ i {
 }
 
 /*-------animations-------- */
+.small-grow,
 .grow {
   transition: all .2s ease-in-out;
 }
@@ -119,13 +131,24 @@ i {
   transform: scale(1.2);
 }
 
+.small-grow:hover {
+  transform: scale(1.065);
+}
+
 /* fade-in animation */
 body,
 .fade {
-  animation: fadein 4s;
-  -moz-animation: fadein 4s; /* Firefox */
-  -webkit-animation: fadein 4s; /* Safari and Chrome */
-  -o-animation: fadein 4s; /* Opera */
+  animation: fadein 2s;
+  -moz-animation: fadein 2s; /* Firefox */
+  -webkit-animation: fadein 2s; /* Safari and Chrome */
+  -o-animation: fadein 2s; /* Opera */
+}
+
+.fast-fade {
+  animation: fadein 1s;
+  -moz-animation: fadein 1s; /* Firefox */
+  -webkit-animation: fadein 1s; /* Safari and Chrome */
+  -o-animation: fadein 1s; /* Opera */
 }
 
 @keyframes fadein {
